--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Bootstrap core CSS -->
-  <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+  <!--<link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />-->
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
   <!--<link href="assets/css/bootstrap.min.css" rel="stylesheet">-->
   <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>-->
   <!-- Custom styles for this template -->
-  <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+  <!--<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>-->
   <link href="assets/css/navbar-top-fixed.css" rel="stylesheet">
 </head>
 <body>
